--- a/blocks/header.css
+++ b/blocks/header.css
@@ -11,5 +11,8 @@
   .header__logo {
     width: 126px;
     height: 24px;
+    margin-top: 28px;
+    margin-left: 27px;
+    margin-bottom: 32px;
   }
 }
