--- a/blocks/page.css
+++ b/blocks/page.css
@@ -2,8 +2,6 @@
   background-color: #000000;
   color: #ffffff;
   margin: 0 auto;
-  margin-left: 20px;
-  margin-right: 20px;
 }
 
 .page__section {
@@ -17,4 +15,10 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+}
+
+@media screen and (max-width: 620px) {
+  .page section {
+    padding-bottom: 0px;
+  }
 }
