--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -11,6 +11,7 @@
     "title button"
     "description description";
   align-items: center;
+  padding-left: 30px;
 }
 
 .profile__edit-button {
@@ -74,7 +75,6 @@
   border-radius: 50%;
   object-fit: cover;
   background-position: center;
-  margin-right: 24px;
 }
 
 @media screen and (max-width: 792px) {
@@ -82,7 +82,6 @@
     width: 50px;
     height: 50px;
   }
-
   .profile__title {
     font-size: 24px;
   }
@@ -91,7 +90,8 @@
 @media screen and (max-width: 620px) {
   .profile__title {
     min-width: 196px;
-    font-size: 24px;
+    font-size: 22px;
+    line-height: 26.63px;
   }
 
   .profile {
@@ -99,8 +99,6 @@
   }
 
   .profile__info {
-    display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     width: 100%;
     margin-top: 30px;
@@ -108,8 +106,15 @@
   }
 
   .profile__description {
+    font-size: 14px;
+    line-height: 16.94px;
     width: 100%;
     text-align: center;
+  }
+
+  .profile__edit-button {
+    width: 18px;
+    height: 18px;
   }
 
   .profile__add-button {
