--- a/pages/index.css
+++ b/pages/index.css
@@ -6,3 +6,8 @@
 @import url(../blocks/cards.css);
 @import url(../blocks/card.css);
 @import url(../blocks/footer.css);
+
+.main__content {
+  padding-left: 20px;
+  padding-right: 20px;
+}
